home nft card alignment fix

--- a/src/components/Home/Genadrop-Created-NFTs/GenadropCreatedNFTs.module.css
+++ b/src/components/Home/Genadrop-Created-NFTs/GenadropCreatedNFTs.module.css
@@ -64,8 +64,7 @@
 }
 
 .cardGrid {
-  display: grid;
-  grid-template-columns: repeat(4, auto);
+  display: flex;
   grid-gap: 0.6em;
 }
 
